Add stunning vending machine image gallery with 7 images, hover effects, and amazing animations

--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
     <section class="products-section" id="products">
         <div class="container">
             <div class="products-header">
-                <span class="products-badge">🛒 SHOP WITH US</span>
                 <h2 class="products-title">Products & Vending Machines</h2>
                 <p class="products-subtitle">Everything you need for a premium car care experience</p>
             </div>
@@ -177,21 +176,59 @@
                 <p class="subsection-description">Convenient on-site vending for all your car care needs</p>
                 <div class="vending-grid">
                     <div class="vending-item">
-                        <div class="vending-placeholder">
-                            <span class="placeholder-icon">📷</span>
-                            <p>Vending Machine 1</p>
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4032.jpeg" alt="Vending Machine - Car Care Products" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Premium Products</p>
+                            </div>
                         </div>
                     </div>
                     <div class="vending-item">
-                        <div class="vending-placeholder">
-                            <span class="placeholder-icon">📷</span>
-                            <p>Vending Machine 2</p>
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4033.jpeg" alt="Vending Machine - Cleaning Supplies" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Cleaning Essentials</p>
+                            </div>
                         </div>
                     </div>
                     <div class="vending-item">
-                        <div class="vending-placeholder">
-                            <span class="placeholder-icon">📷</span>
-                            <p>Vending Machine 3</p>
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4034.jpeg" alt="Vending Machine - Air Fresheners" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Fresh Scents</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vending-item">
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4035.jpeg" alt="Vending Machine - Towels & More" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Towels & More</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vending-item">
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4036.jpeg" alt="Vending Machine - Detailing Products" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Detail Supplies</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vending-item">
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4037.jpeg" alt="Vending Machine - Car Accessories" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Car Accessories</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vending-item">
+                        <div class="vending-image-wrapper">
+                            <img src="images/IMG_4038.jpeg" alt="Vending Machine - Complete Selection" class="vending-image">
+                            <div class="vending-overlay">
+                                <p class="vending-label">Full Selection</p>
+                            </div>
                         </div>
                     </div>
                 </div>
