Add Simoniz product images with stunning hover effects and professional styling

--- a/index.html
+++ b/index.html
@@ -219,27 +219,28 @@
                 <p class="subsection-description">Professional-grade cleaning solutions for the best results</p>
                 <div class="products-grid">
                     <div class="product-item">
-                        <div class="product-placeholder">
-                            <span class="placeholder-icon">🧴</span>
-                            <p>SIMONIZ Soap</p>
+                        <div class="product-image-wrapper">
+                            <img src="images/IMG_4027.PNG" alt="SIMONIZ Professional Soap" class="product-image">
                         </div>
                     </div>
                     <div class="product-item">
-                        <div class="product-placeholder">
-                            <span class="placeholder-icon">🧴</span>
-                            <p>SIMONIZ Wax</p>
+                        <div class="product-image-wrapper">
+                            <img src="images/IMG_4028.PNG" alt="SIMONIZ Premium Wax" class="product-image">
                         </div>
                     </div>
                     <div class="product-item">
-                        <div class="product-placeholder">
-                            <span class="placeholder-icon">🧴</span>
-                            <p>SIMONIZ Foam Brush</p>
+                        <div class="product-image-wrapper">
+                            <img src="images/IMG_4029.PNG" alt="SIMONIZ Foam Brush Cleaner" class="product-image">
                         </div>
                     </div>
                     <div class="product-item">
-                        <div class="product-placeholder">
-                            <span class="placeholder-icon">🧴</span>
-                            <p>SIMONIZ Tire Cleaner</p>
+                        <div class="product-image-wrapper">
+                            <img src="images/IMG_4030.PNG" alt="SIMONIZ Tire Cleaner" class="product-image">
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="product-image-wrapper">
+                            <img src="images/IMG_4031.PNG" alt="SIMONIZ Complete Care" class="product-image">
                         </div>
                     </div>
                 </div>
