Reduce soap image zoom, replace facility image with 3-image gallery with hover effects

--- a/index.html
+++ b/index.html
@@ -157,7 +157,17 @@
 
             <!-- Facility Image Showcase -->
             <div class="facility-image-container">
-                <img src="images/entrance.jpg" alt="Bubble Brush Car Wash Entrance" class="facility-entrance-image">
+                <div class="facility-image-grid">
+                    <div class="facility-image-item">
+                        <img src="images/IMG_4049.PNG" alt="Bubble Brush Car Wash Facility" class="facility-image">
+                    </div>
+                    <div class="facility-image-item">
+                        <img src="images/IMG_4050.PNG" alt="Bubble Brush Car Wash Bays" class="facility-image">
+                    </div>
+                    <div class="facility-image-item">
+                        <img src="images/IMG_4061.jpeg" alt="Bubble Brush Car Wash Equipment" class="facility-image">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -387,7 +397,7 @@
                         <li>✓ <strong>$13 = 16 minutes</strong></li>
                     </ul>
                     <p class="payment-note">Tokens only! No cash or card</p>
-                    <p class="payment-note" style="margin-top: 0.5rem;">⚠️ If machine shuts off, requires 6 tokens to restart</p>
+                    <p class="payment-note" style="margin-top: 0.5rem;">⚠️ If machine shuts off, requires 8 tokens to restart</p>
                 </div>
                 <div class="pricing-card">
                     <h3>Vending Machines</h3>
@@ -441,7 +451,7 @@
                     <p><strong>Self-Serve Bays:</strong><br>
                     Token-Based System<br>
                     $1 = 1 Token<br>
-                    Minimum: 6 Tokens ($8)</p>
+                    Minimum: 8 Tokens ($8)</p>
                     <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #991b1b; font-weight: 600;">⏱️ When machine beeps you have one minute left + you can add additional tokens for more time. If the machine turns off, add 8 more tokens.</p>
                 </div>
             </div>
