Update facility gallery: remove deleted image, add 4 new facility images (6 total images)

--- a/index.html
+++ b/index.html
@@ -162,10 +162,19 @@
                         <img src="images/IMG_4049.PNG" alt="Bubble Brush Car Wash Facility" class="facility-image">
                     </div>
                     <div class="facility-image-item">
-                        <img src="images/IMG_4050.PNG" alt="Bubble Brush Car Wash Bays" class="facility-image">
+                        <img src="images/IMG_4061.jpeg" alt="Bubble Brush Car Wash Equipment" class="facility-image">
                     </div>
                     <div class="facility-image-item">
-                        <img src="images/IMG_4061.jpeg" alt="Bubble Brush Car Wash Equipment" class="facility-image">
+                        <img src="images/IMG_5486.JPG" alt="Bubble Brush Car Wash Bay" class="facility-image">
+                    </div>
+                    <div class="facility-image-item">
+                        <img src="images/IMG_0215.jpeg" alt="Bubble Brush Car Wash Services" class="facility-image">
+                    </div>
+                    <div class="facility-image-item">
+                        <img src="images/IMG_0216.jpeg" alt="Bubble Brush Car Wash Details" class="facility-image">
+                    </div>
+                    <div class="facility-image-item">
+                        <img src="images/IMG_0218.jpeg" alt="Bubble Brush Car Wash Features" class="facility-image">
                     </div>
                 </div>
             </div>
