Move restart machine text to Important Rules section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <span class="step-number">2</span>
                         <div class="step-content">
                             <h3>SOAP - Wet Car</h3>
-                            <p>Turn dial to <strong>SOAP</strong> & use wand to wet car. Also spray off brush.</p>
+                            <p>Turn dial to <strong>SOAP</strong> & use high-pressure gun to wet car. Also spray off brush.</p>
                         </div>
                     </div>
                     <div class="instruction-step">
@@ -98,14 +98,14 @@
                         <span class="step-number">4</span>
                         <div class="step-content">
                             <h3>RINSE - Top to Bottom</h3>
-                            <p>Turn dial to <strong>RINSE</strong>. Use wand, rinse from top to bottom.</p>
+                            <p>Turn dial to <strong>RINSE</strong>. Use high-pressure gun to rinse from top to bottom.</p>
                         </div>
                     </div>
                     <div class="instruction-step">
                         <span class="step-number">5</span>
                         <div class="step-content">
                             <h3>WAX</h3>
-                            <p>Turn dial to <strong>WAX</strong>. Use wand to apply protective wax coating.</p>
+                            <p>Turn dial to <strong>WAX</strong>. Use high-pressure gun to apply protective wax coating.</p>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,6 @@
                             <li>$13 = 16 minutes</li>
                         </ul>
                         <p class="minimum-note"><strong>Minimum: $8 (8 tokens)</strong></p>
-                        <p class="restart-note">If machine shuts off, it requires 8 tokens to restart</p>
                         <div class="add-time-info">
                             <strong>⏱️ Need More Time?</strong>
                             <p>When beep goes off, add additional tokens. Each token gives you 2 more minutes.</p>
@@ -139,6 +138,7 @@
                             <li><strong>TRUCK OWNERS:</strong> Sweep debris into garbage before hosing bed</li>
                             <li><strong>NO SPRAYING DEBRIS IN BAYS</strong> - Violators will be banned and police will be called for trespassing</li>
                         </ul>
+                        <p class="restart-note" style="margin-top: 1rem;"><strong>⚠️ If machine shuts off, it requires 8 tokens to restart</strong></p>
                     </div>
 
                     <div class="info-box products-box">
