Create prominent restart warning box with pulsing animation and large bold text

--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
                         </div>
                     </div>
 
+                    <div class="info-box restart-warning-box">
+                        <h3>🚨 MACHINE RESTART NOTICE</h3>
+                        <p class="restart-warning-text">IF MACHINE SHUTS OFF, IT REQUIRES 8 TOKENS TO RESTART</p>
+                    </div>
+
                     <div class="info-box warning-box">
                         <h3>⚠️ Important Rules</h3>
                         <ul class="rules-list">
@@ -138,7 +143,6 @@
                             <li><strong>TRUCK OWNERS:</strong> Sweep debris into garbage before hosing bed</li>
                             <li><strong>NO SPRAYING DEBRIS IN BAYS</strong> - Violators will be banned and police will be called for trespassing</li>
                         </ul>
-                        <p class="restart-note" style="margin-top: 1rem;"><strong>⚠️ If machine shuts off, it requires 8 tokens to restart</strong></p>
                     </div>
 
                     <div class="info-box products-box">
